--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     sdk: flutter
   flutter_typeahead: ^4.6.2
   form_builder_extra_fields: ^10.0.0
+  json_annotation: ^4.8.1
   geocoder2: ^1.4.0
   geolocator: ^9.0.2
   google_maps_flutter: ^2.4.0
@@ -41,3 +42,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   lints: ^2.1.1
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
+
+
